# beachwatch

./: .coverage  README.md  pyproject.toml
.github/workflows/: tests.yml
beachwatch/: __init__.py  beachwatch.py
beachwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_beachwatch.py
